Added CSS and side navbar

--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My ePortfolio</title>
+    <link rel="stylesheet" href="main.css">
+    <script src="https://kit.fontawesome.com/62ce55c6d5.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
-    <h1>Hello World</h1>
+    <!-- side nav bar -->
+    <div class="sidenav">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRa429vLvtApw_rBGeH6EjH8McC0BnQ4N8hpM60Bjguig&s" alt="Profile Picture">
+        <h1 class="name">Jazper Garcia</h1>
+        <div class="menu">
+            <a class="active" href="#home"><i class="fa fa-fw fa-home"></i> Home</a>
+            <a href="#about"><i class="fa fa-fw fa-user"></i> About</a>
+            <a href="#projects"><i class="fa fa-fw fa-pen"></i> Projects</a>
+            <a href="#certification"><i class="fa fa-fw fa-award"></i> Certification</a>
+            <a href="#contact"><i class="fa fa-fw fa-phone"></i> Contact</a>
+        </div>
+    </div>
+        
+    <!-- main body -->
+    <div class="main">
+        <h1>This the other side</h1>
+    </div>
 </body>
 </html>
