Added image and change the background of the body to my image

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </div>
         
     <!-- main body -->
+    <div class="overlay"></div>
     <div class="main">
         <h1>This the other side</h1>
     </div>
