modified the decription of projects

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         </div>
                     </div>
                 </div>
-                <br>
+                <hr>
                 <h1>Skills</h1>
                 <div class="skills">
                     <div class="container_skills">
@@ -78,7 +78,7 @@
                         </div>
                     </div>
                 </div>
-                <br>
+                <hr>
                 <h1>Projects</h1>
                 <div class="box_container">
                     <div class="box">
@@ -88,7 +88,7 @@
                                 <img src="asset/mysweetspot-logo.png" alt="My Sweet Spot logo">
                             </div>
                             <div class="column_box1_2">
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                                <p>Your one-stop destination for artisanal delights at My Sweets Spot. Indulge in the world of homemade cakes and bread meticulously crafted with love.</p>
                             </div>
                         </div>
                     </div>
@@ -109,7 +109,7 @@
                                 <img src="asset/illuminateminions_logo.png" alt="illuminateminions logo">
                             </div>
                             <div class="column_box3_2">
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                                <p>Welcome to Illuminate Minions Airlines, where whimsy meets world-class aviation! We take pride of our uniqueness in air travel in Illuminate Minions Airlines. We're not only a Southeast Asia airline transporting passengers but a blend of efficiency with something exciting that can make your trip memorable.</p>
                             </div>
                         </div>
                         <!-- <p>Illuminate Minions</p> -->
@@ -120,8 +120,7 @@
                                 <img src="asset/adoptopia_logo.png" alt="adoptopia logo">
                             </div>
                             <div class="column_box4_2">
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                            </div>
+                                <p>Adoptopia is a haven where the heartwarming tale of uniting families and their four-legged companions unfolds. Committed to forging enduring bonds, Adoptopia offers a nurturing space for prospective adopters to encounter, connect, and discover their ideal companions from a varied selection of affectionate pets.
                         </div>
                         </div>
                         <!-- <p>Adoptopia</p> -->
@@ -132,7 +131,7 @@
                                 <img src="asset/lemonnom.webp" alt="lemonnom logo">
                             </div>
                             <div class="column_box5_2">
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                                <p>Welcome to Lemonnom Tech News, your trusted source for daily technology news. Stay up to date with our accessible coverage of groundbreaking breakthroughs, popular gadgets, and current digital trends. Lemonnom Tech News will keep you informed with clear, short, and easily accessible technical reporting.</p>
                             </div>
                         </div>
                         <!-- <p>Lemonnom Tech News</p> -->
