added button on projects

--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
                             </div>
                             <div class="column_box1_2">
                                 <p>Your one-stop destination for artisanal delights at My Sweets Spot. Indulge in the world of homemade cakes and bread meticulously crafted with love.</p>
+                                <form action="https://mysweetsspot.com">
+                                    <input type="submit" value="Visit Site" />
+                                </form>
                             </div>
                         </div>
                     </div>
@@ -96,6 +99,9 @@
                         <div class="box2">
                             <div class="column_box2_1">
                                 <img src="asset/petshop_logo.png" alt="Petshop logo">
+                                <form action="">
+                                    <input type="submit" value="Visit Site" />
+                                </form>
                             </div>
                             <div class="column_box2_2">
                                 <p>Your one-stop store for all of your needs for a pet companion and pet care is pet-shop.com. Encompassing everything from a huge selection of pet foods and snacks to pet accessories. We take pride in the exclusive collections that premium pet items bring to the market and the unmatched customer care we offer to our customers every day, both in our physical store and online (pet-shop.com). Simple online shopping for all your pet care requirements!</p>
@@ -110,6 +116,9 @@
                             </div>
                             <div class="column_box3_2">
                                 <p>Welcome to Illuminate Minions Airlines, where whimsy meets world-class aviation! We take pride of our uniqueness in air travel in Illuminate Minions Airlines. We're not only a Southeast Asia airline transporting passengers but a blend of efficiency with something exciting that can make your trip memorable.</p>
+                                <form action="https://illuminate-minions.bitbucket.io">
+                                    <input type="submit" value="Visit Site" />
+                                </form>
                             </div>
                         </div>
                         <!-- <p>Illuminate Minions</p> -->
@@ -118,10 +127,13 @@
                         <div class="box4">
                             <div class="column_box4_1">
                                 <img src="asset/adoptopia_logo.png" alt="adoptopia logo">
+                                <form action="">
+                                    <input type="submit" value="Visit Site" />
+                                </form>
                             </div>
                             <div class="column_box4_2">
-                                <p>Adoptopia is a haven where the heartwarming tale of uniting families and their four-legged companions unfolds. Committed to forging enduring bonds, Adoptopia offers a nurturing space for prospective adopters to encounter, connect, and discover their ideal companions from a varied selection of affectionate pets.
-                        </div>
+                                <p>Adoptopia is a haven where the heartwarming tale of uniting families and their four-legged companions unfolds. Committed to forging enduring bonds, Adoptopia offers a nurturing space for prospective adopters to encounter, connect, and discover their ideal companions from a varied selection of affectionate pets.</p>
+                            </div>
                         </div>
                         <!-- <p>Adoptopia</p> -->
                     </div>
@@ -132,6 +144,9 @@
                             </div>
                             <div class="column_box5_2">
                                 <p>Welcome to Lemonnom Tech News, your trusted source for daily technology news. Stay up to date with our accessible coverage of groundbreaking breakthroughs, popular gadgets, and current digital trends. Lemonnom Tech News will keep you informed with clear, short, and easily accessible technical reporting.</p>
+                                <form action="https://lemonnom.wordpress.com">
+                                    <input type="submit" value="Visit Site" />
+                                </form>
                             </div>
                         </div>
                         <!-- <p>Lemonnom Tech News</p> -->
